kubernetes/apps/n8n-service/n8n-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: n8n-nodeport
  namespace: n8n-prod
spec:
  type: NodePort
  selector:
    app: n8n
  ports:
    - port: 5678
      targetPort: 5678
      nodePort: 30000
